feat: allow disconnecting social accounts
